# dcc067

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_experiment.sh  run_experiment_elite_single_ga.sh  run_experiment_original_ma.sh
convex/: main.py
latex/: .latexmkrc  abstract.tex  bibliography.bib  conclusion.tex  definitions.tex  glossaries.tex  introduction.tex  main.tex  methodology.tex  packages.tex  results.tex
latex/tables/: genetic_results.tex  memetic_results.tex
mealpy_getting_started/: cec_fucntion.py  experimentEliteSingleGA.py  mealpy_getting_started.py  run_experiment.sh
mealpy_getting_started/results/: .~lock.Untitled 1.ods#  Untitled 1.ods
results/: experiment_20240823081110_10dim_1ep.csv  experiment_20240823082200_10dim_10000ep.csv
results/F12014/: EliteSingleGA-tournament-one_point-flip-10.txt  EliteSingleGA-tournament-one_point-swap-10.txt
results/F12014/EliteSingleGA/: roulette-uniform-swap-10.txt
results/experiment_20240823082200/: 10.ods
results/experiment_20240823113351/: .~lock.20.ods#  20.csv  20.ods
results/experiment_20240908175413/: 10.csv
results/part_3/: elite_single_ga.ods  original_ma.ods
square_sum/: main.py
src/: constants.py  elite_single_ga.py  main.py  objective_function.py  original_ma.py  search.py  util.py
src/convex/: main.py
src/optimizers/: elite_single_ga.py  original_ma.py
src/other/: analyzer.py  constraint_function.py  square_sum.py  threebar_truss_design.py
src/util/: compile_results.py  experiment.py  get_fitness.py  printing_helper.py
(+201 files in other folders)
